# cache-buster

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  crates.js  search-index.js  settings.html  source-files.js
.github/workflows/: linux.yml
actix-example/: Cargo.toml  build.rs
actix-example/src/: cache_buster_data.json  main.rs
actix_example/: all.html  fn.file_exists.html  fn.get_full_path_runner.html  fn.main.html  index.html  sidebar-items.js
actix_web/: all.html  constant.CACHE_AGE.html  fn.handle_assets.html  fn.handle_favicons.html  fn.main.html  fn.services.html  index.html  sidebar-items.js  struct.Asset.html  struct.FILES.html  struct.Favicons.html  struct.INDEX.html  struct.favicons.html  struct.serve_index.html  struct.static_files.html
actix_web/index/: fn.get_index.html  index.html  sidebar-items.js
cache_buster/: all.html  constant.CACHE_BUSTER_DATA_FILE.html  constant.ENV_VAR_NAME.html  enum.BusterBuilderError.html  index.html  sidebar-items.js  struct.Buster.html  struct.BusterBuilder.html
cache_buster/filemap/: index.html  sidebar-items.js  struct.Files.html
cache_buster/hash/: enum.BusterBuilderError.html  index.html  struct.Buster.html  struct.BusterBuilder.html
cache_buster/map/: index.html  sidebar-items.js  struct.Files.html
cache_buster/processor/: enum.BusterBuilderError.html  enum.NoHashCategory.html  index.html  sidebar-items.js  struct.Buster.html  struct.BusterBuilder.html
examples/actix-web/: .gitignore  Cargo.toml  build.rs
examples/actix-web/src/: cache_buster_data.json  index.rs  main.rs
examples/actix-web/static/cachable/: index.html
examples/actix-web/static/cachable/css/: main.css
implementors/lazy_static/: trait.LazyStatic.js
implementors/rust_embed/: trait.RustEmbed.js
src/: filemap.rs  hash.rs  lib.rs  map.rs  processor.rs
src/actix_example/: main.rs.html
(+27 files in other folders)
