[package]
name = "cache-buster"
version = "0.2.0"
authors = ["realaravinth <realaravinth@batsense.net>"]
license = "MIT OR Apache-2.0"
description = "Compiletime cache-busting web applications written in rust"
keywords = ["cache-busting", "web", "caching", "http"]
homepage = "https://github.com/realaravinth/cache-buster"
repository = "https://github.com/realaravinth/cache-buster"
readme = "README.md"
edition = "2021"

[workspace]
members = [
	".",
	"examples/actix-web"
]

[lib]
name = "cache_buster"
path = "src/lib.rs"

[dependencies]
mime_guess = "2.0"
mime = "0.3.16"

sha2 = "0.10"

derive_builder = "0.11"

data-encoding = "2.3.2"
walkdir = "2"

serde_json = "1"
serde = { version = "1", features = ["derive"]}
